--- a/pages/results.html
+++ b/pages/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/logo.svg"/>
-    <title>Home</title>
+    <title>Result</title>
     <link rel="stylesheet" href="../CSS/home.css">
     <link rel="stylesheet" href="../CSS/nav.css">
 	<link rel="stylesheet" href="../CSS/teammember.css">
