--- a/index.html
+++ b/index.html
@@ -268,9 +268,8 @@
         </h1>
         <div id="video">
             <div>
-                <video controls>
-                    <source src="https://video.igem.org/w/iVfbHmCb45yV2gWX3wsMYN" type="video/mp4">
-                </video>
+                <iframe title="HUBU-SKY-China: Hydrosoilguard (2023) - Project Promotion [English]" width="1200" height="675" src="https://video.igem.org/videos/embed/911a84c7-50d7-4a9d-9cf0-3d0feace2322" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"> 
+                </iframe>
             </div>
         </div>
     </section>
