--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="introduction_character">
                 <h4 style="text-align:right;">New Discoveries</h4>
-                <h3 style="text-align:right;">- H2</h3>
+                <h3 style="text-align:right;">— H<sub>2</sub></h3>
                 <p style="text-align:right;">It has been shown that the increase of hydrogen gas in rhizosphere has a positive impact on plant growth and the produce of hydrogen may be related to plant stress resistance.</p>
             </div>
 
