--- a/pages/engineering.html
+++ b/pages/engineering.html
@@ -89,24 +89,19 @@
 
 <div class="screen">
   <div id="title">
-  <h1 class="heading">
-    <span>H</span>
-    <span>U</span>
-    <span>M</span>
-    <span>A</span>
-    <span>N</span>
-  </h1>
-  <h1 class="heading">
-    <span>P</span>
-    <span>R</span>
-    <span>A</span>
-    <span>C</span>
-    <span>T</span>
-    <span>I</span>
-    <span>C</span>
-    <span>E</span>
-    <span>S</span>
-  </h1>
+	<h1 class="heading">
+	    <span>E</span>
+	    <span>N</span>
+	    <span>G</span>
+	    <span>I</span>
+	    <span>N</span>
+	    <span>E</span>
+	    <span>E</span>
+	    <span>R</span>
+	    <span>I</span>
+	    <span>N</span>
+	    <span>G</span>
+	</h1>
   </div>
   <div class="banner"><img src="https://static.igem.wiki/teams/4927/wiki/banner/hp1.png"></div>
 </div>
