--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <h3>safty guide</h3>
             </div>
             <div class="box">
-                <img src="./img/pet/HydABC.svg"/>
+                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/hydabc.svg"/>
                 <h3>around the world</h3>
             </div>
         </div>
