--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
         </h1>
         <div class="box-container">
             <div class="box">
-                <img src="./img/pet/ADH.svg"/>
+                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/adh.svg"/>
                 <h3>affordable hotels</h3>
             </div>
             <div class="box">
-                <img src="./img/pet/FALDH.svg"/>
+                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/faldh.svg"/>
                 <h3>food and drinks</h3>
             </div>
             <div class="box">
-                <img src="./img/pet/FDH.svg"/>
+                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/fdh.svg"/>
                 <h3>safty guide</h3>
             </div>
             <div class="box">
