--- a/pages/education.html
+++ b/pages/education.html
@@ -100,7 +100,8 @@
 		  <span>N</span>
 		</h1>
 		</div>
-		<div class="banner"><img src="https://static.igem.wiki/teams/4927/wiki/banner/education.png"></div>
+		<div class="banner"><img src="https://static.igem.wiki/teams/4927/wiki/banner/education.png">
+		</div>
 	</div>
 	
 	<div class="article-container">
