--- a/pages/education.html
+++ b/pages/education.html
@@ -125,7 +125,7 @@
 					<p>
 						&nbsp&nbsp&nbsp&nbsp Farmers, as direct users of fertilizers, can solve the problem of overapplication of fertilizers fundamentally and effectively only by improving farmers' awareness of scientific fertilization. Therefore, the team went to Nanhu Village, a vegetable base in Wuhan, Hubei Province, to carry out science popularization activities on fertilizer reduction. The team went directly to the farmland and carried out popular science publicity on the farmers around the types and types of fertilizers and the rational application of fertilizers
 					</p>
-					<img src="https://static.igem.wiki/teams/4927/wiki/education/1figure-1.png" alt="">
+					<img src="../img/education/wu49.png" alt="">
 					<p class="figure">Figure 2: Members of the team are popularizing science</p>
 					<p>
 						&nbsp&nbsp&nbsp&nbsp In addition to the popularization activities, the team members also sampled and tested the soil of some farmers, and <a href="" alt="HP">fed back the tested data</a> to the farmers to guide them to improve the fertilization structure and apply fertilizer scientifically. 
@@ -138,7 +138,7 @@
 					<p>
 						&nbsp&nbsp&nbsp&nbsp Our influence is ultimately limited, even if we provide a wonderful science education for a village, but China is so vast, the world is even wider. In order to achieve the broadest influence and the best effect of popular science education, we decided to use the network platform to spread our popular science education.We have recorded a number of podcasts about scientific fertilization for farmers and uploaded them to online media for all social groups to listen to. According to the feedback, our podcasts are very popular, and some netizens are urging us to update them as soon as possible so that we can learn more about scientific fertilization.
 					</p>
-					<img src="" alt="">
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/2figure-1.png" alt="">
 					<p class="figure">
 						Figure 3: Netizens' feedback on our online science popularization
 					</p>
@@ -153,23 +153,23 @@
 					<p>
 						&nbsp&nbsp&nbsp&nbsp Wuhan 49 Middle School, founded in 1957, is not only a key school in Wuhan, but also a model school and civilized unit in Hubei Province. Located by the Yangtze River, the school boasts a rich history and outstanding academic achievements. Known as the ten-mile Steel City by the Yangtze River, the university combines the aura of Qingshan Mountain with a beautiful environment and lively culture.
 					</p>
-					<img src="" alt="">
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/3figure-1.jpg" alt="">
 					<p class="figure">Figure 4: The Gate of Wuhan 49</p>
 					<p>
 						&nbsp&nbsp&nbsp&nbsp In order to popularize IGEM knowledge, promote synthetic biology, and further explore biological hydrogen production technology, our team members went to Wuhan 49 Middle School in Hubei Province to carry out a science popularization activity with the theme of "Hydrogen Energy Future". Based on professional knowledge and enthusiasm, our team explained to high school students about the application of hydrogen, the way of hydrogen production, the introduction of IGEM project, and the content of college life.
 					</p>
-					<img src="" alt="">
-					<p class="figure">Figure 5: Students actively interact with the team"</p>
+					<img src="../img/education/2student.png" alt="">
+					<p class="figure">Figure 2: Students actively interact with the team"</p>
 					<p>
 						&nbsp&nbsp&nbsp&nbsp With a high level of performance, our team communicated complex scientific concepts to students in a simple way, with humor, and presented a wonderful biology science course. The class atmosphere was relaxed and lively with the active interaction of the students in Grade One. In the end, the students enthusiastically asked to leave the contact information of the captain, and the activity was full of laughter and laughter.
 					</p>
-					<img src="" alt="">
-					<p class="figure">Figure 6: The students are answering the questions</p>
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/3figure-3.jpg" alt="">
+					<p class="figure">Figure 3: The students are answering the questions</p>
 					<p>
 						&nbsp&nbsp&nbsp&nbsp After the activity, many students of Wuhan No. 49 Middle School contacted our team leader through the online channel, expressing their regret for not being able to attend the activity in person, and also expressing their strong desire for us to come to the school to give lectures again. The team members felt that their hard work had paid off, and the positive feedback encouraged us to continue contributing to science education.
 					</p>
-					<img src="" alt="">
-					<p class="figure">Figure 7: The team poses for a photo with students</p>
+					<img src="../img/education/tem4.png" alt="">
+					<p class="figure">Figure 4: The team poses for a photo with students</p>
 				</div>
 			</div>
 			<div data-tab="districtName4" class="districtName">
@@ -192,33 +192,33 @@
 	
 					<p>Before we teach children about biology, we are most likely to keep them in the dark. Given that they have relatively little knowledge about the subject. However, when I actually went to that class, I found the situation unexpected.</p>
 					<p>When we talked about the physical properties of hydrogen gas, many students already knew about it, and to my surprise, many students also knew about its chemical properties, that is, flammable and explosive. I was very surprised!</p>
-					<img src="" alt="">
-					<p class="figure">Figure 8: Children answering questions in class</p>
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/4figure-1.png" alt="">
+					<p class="figure">Figure 1: Children answering questions in class</p>
 	
 					<p>In addition, during the teaching process, although the biology class was relatively new to them and rarely exposed to it, the children showed great enthusiasm and motivation. No matter what question we posed, they would respond positively and even scramble to raise their hands to answer.</p>
-					<img src="" alt="">
-					<p class="figure">Figure 9: Children actively raise their hands to answer</p>
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/4figure-2.png" alt="">
+					<p class="figure">Figure 2: Children actively raise their hands to answer</p>
 	
 					<p>In class, we did a paper cutting activity to help the children understand the cascade catalytic reaction in biology. During the paper-cutting, they were also very engaged and actively involved, showing a patience that we had not expected during the tedious steps of paper-cutting. Some clever children even raised their hands eagerly after they had finished cutting the paper themselves, hoping to be rewarded.</p>
 	
-					<img src="" alt="">
-					<p class="figure">Figure 10: Children engaged in a paper-cutting game</p>
+					<img src="../img/education/3children.png" alt="">
+					<p class="figure">Figure 3: Children engaged in a paper-cutting game</p>
 					<p>The whole class atmosphere is very active and full of enthusiasm. After class, many students asked when they could take such a course again, which showed that they were very interested in the knowledge.</p>
 	
 					<h3>Volunteer Teaching Activity "Bridge of Hope"</h3>
 					<p>The team has promoted the importance of protecting the environment to children through popular science courses, documentaries and other forms. At the same time, the team designed an environmental protection handicraft competition, and painted beautiful patterns on the homemade cardboard boxes, so that children could experience the beauty of the ecological environment and stimulate their enthusiasm for protecting the environment.</p>
-					<img src="" alt="">
-					<p class="figure">Figure 11: The team carried out science popularization activities on environmental protection</p>
-					<img src="" alt="">
-					<p class="figure">Figure 12: Environmental protection boxes made by the children</p>
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/4figure-4.jpg" alt="">
+					<p class="figure">Figure 4: The team carried out science popularization activities on environmental protection</p>
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/4figure-5.jpg" alt="">
+					<p class="figure">Figure 5: Environmental protection boxes made by the children</p>
 					<p>The purpose of the education is not only to teach knowledge, but also to cultivate mental health. The team members also explained the mental health education course "My Emotional Little Monster" for the children, comparing emotions to cute little monsters, and vividly guiding the children to learn to rationally vent and control their emotions. Finally, through the "trouble box" small game, the trouble is thrown away.</p>
-					<img src="" alt="">
-					<p class="figure">Figure 13: Children are playing the worry box game</p>
+					<img src="../img/education/6children.png" alt="">
+					<p class="figure">Figure 6: Children are playing the worry box game</p>
 					
 					<p>At the end of the course, the team members sent a kind message to each child, hoping that they would preserve their love and go to a better future in their future study and life.</p>
 	
-					<img src="" alt="">
-					<p class="figure">Figure 14: A message from the team members to the children</p>
+					<img src="https://static.igem.wiki/teams/4927/wiki/education/4figure-7.jpg" alt="">
+					<p class="figure">Figure 7: A message from the team members to the children</p>
 	
 				</div>
 			</div>
@@ -234,9 +234,9 @@
 	
 				<h3>Petri dish art design</h3>
 				<p>&nbsp&nbsp&nbsp&nbsp Before we know it, our summer camp activities are coming to an end. In the final stage of the activity, the students learned the basic operation and principle of the camp, and the freshmen showed simple but creative patterns of microorganisms on the petri dish, transforming their rich imagination into art on the dish. Each student excelled in terms of skill and creativity, which made it difficult for us to rank their works. In the end, we awarded each student a different level of award. This summer camp is not the end, but a new beginning, for these students to open the door to synthetic biology.</p>
-				<img src="" alt="">
+				<img src="https://static.igem.wiki/teams/4927/wiki/education/5figure-1-1.png" alt="">
 				<p class="figure">Figure 1: Excellent design presentation</p>
-				<img src="" alt="">
+				<img src="https://static.igem.wiki/teams/4927/wiki/education/5figure-1-2.png" alt="">
 				<p class="figure">Figure 2: Display of outstanding works</p>
 	
 			</div>
@@ -245,28 +245,31 @@
 				<h3>IGEM competition experience sharing</h3>
 				<p>&nbsp&nbsp&nbsp&nbsp In order to deepen students' understanding of IGEM, our team actively cooperated with four other teams from Hubei University to hold an activity called "IGEM Competition Experience Sharing Meeting" on campus. The main purpose of the sharing session was to help students better understand the IGEM competition and how to perform well in this competition.</p>
 				<p>&nbsp&nbsp&nbsp&nbsp The sharing session covered many aspects, starting with an introduction to what IGEM is, including the background, purpose and importance of the International Genetically Engineered Machine Competition. Then, we discussed in detail how to prepare for the IGEM competition, including the conception, design and implementation of the project. In addition, specific cases of IGEM projects were shared to inspire students' creativity and thinking.</p>
-				<img src="" alt="">
+				<img src="../img/education/1teams.png" alt="">
 				<p class="figure">Figure 1: Teams sharing IGEM projects</p>
 	
 				<p>The sharing session was full of energy and the students showed great enthusiasm. They asked questions and shared their thoughts and doubts. This interaction promoted the transfer and exchange of knowledge, and also stimulated more students' interest in participating in IGEM competition. The sharing session not only enriched the students' knowledge, but also provided a platform for them to learn from each other and cooperate, promoting cooperation and communication between teams.</p>
-	 
+				<img src="../img/education/2student.png" alt="">
+				<p class="figure">Figure 2: Students are asking questions</p>
+				<img src="https://static.igem.wiki/teams/4927/wiki/education/6figure-3.jpg" alt="">
+				<p class="figure">Figure 3: A group photo of each team member</p>
 				<h3>IGEM campus publicity</h3>
 				<p>In September this year, we held Biology Week, which aims to provide new students with more exposure to synthetic biology, while focusing on expanding the reach of synthetic biology and attracting potential IGEM (International Genetic Engineering Competition) participants. In order to achieve this goal, we have set up booths in the school and prepared a wealth of promotional materials and gifts to help more students learn more about the IGEM competition and our projects, and further stimulate their strong interest in synthetic biology.</p>
 	
 				<p>During the event, we introduced the IGEM competition to a large number of students, many of whom showed strong interest and actively joined our IGEM exchange and sharing group. We firmly believe that many of these students will make outstanding achievements in the synthetic biology competition and the field in the future, and contribute their own strength to the progress of synthetic biology.</p>
-				<img src="" alt="">
+				<img src="https://static.igem.wiki/teams/4927/wiki/education/7figure-1.jpg" alt="">
 				<p class="figure">Figure 1: Students are learning about our promotional materials</p>
 	
-				<img src="" alt="">
+				<img src="https://static.igem.wiki/teams/4927/wiki/education/7figure-2.jpg" alt="">
 				<p class="figure">Figure2: Our team members are introducing the students to synthetic biology</p>
 	
 				<h3>Charity Sale</h3>
 				<p>In order to support those children who are living in poverty and cannot afford education, Our team cooperated with several teams from Hubei universities and Hubei regions, including HUBU-HUBEI-CHINA, HUBU-WUHAN-CHINA, Hubu-Hubei -China, HUBU-China and HBU-China, to jointly plan and hold a charity bazaar. The event aimed to raise funds for children in need of educational support in a creative and enthusiastic way, while also promoting the IGEM competition as well as synthetic biology knowledge.</p>
-				<img src="" alt="">
+				<img src="../img/education/1Theteams.png" alt="">
 				<p class="figure">Figure1:The team's booth and creative products designed by the team</p>
 				<p>Each team has carefully designed cultural and creative products, which are not only important carriers of bioscience, but also the results of the team's innovative ideas and creative thinking. We set up booths in schools and communities to display these cultural and creative products to the public, and at the same time use enthusiastic language and popular science knowledge to convey the significance of IGEM competition and the basic concepts of synthetic biology.</p>
 				
-				<img src="" alt="">
+				<img src="https://static.igem.wiki/teams/4927/wiki/education/8figure2.jpg" alt="">
 				<p class="figure">Figure2:Students are learning about the IGEM competition and our bazaar</p>
 				<p>The results of this event are very satisfactory. Not only did it successfully raise funds, but it also triggered more attention to education and science in the society. The positive response and support from the public inspired us, inspired more people to join and pushed for more similar events to be held. This charity sale is more than just an act of kindness, it is also a demonstration of how creativity and collaboration can help those most in need of support, while promoting the importance of science and education. We look forward to more such meaningful initiatives in the future. We raised a total of ￥1706.53 and donated it to Hubei Youth Development Foundation.</p>
 				<img src="" alt="">
@@ -274,6 +277,7 @@
 	
 				<h3>Sand Lake park publicity</h3>
 				<p>In order to strengthen the popularization of synthetic biology, we carry on this mission to the Shahu Park in Wuhan. In this beautiful city park, we spared no effort to distribute promotional materials to the citizens, aiming to dispel the prejudice they may have because of their limited knowledge of synthetic biology, and to stimulate their strong interest in this field. We have brought the community closer to synthetic biology by showing them a large number of practical examples of products manufactured by synthetic biology techniques in their vicinity, including medicines, daily chemicals and various types of food. The aim of this initiative is to make more people aware of the potential and value of synthetic biology, in order to promote the popularization and application of science.</p>
+				<img src="../img/education/weare.png" alt="">
 				<p class="figure">figure 3:We are distributing publicity materials to the public</p>
 			</div>
 			<div data-tab="districtName7" class="districtName">
@@ -294,6 +298,8 @@
 				</div>
 			</div>
 		</div>
+	
+	</div>
 	
 	</div>
 
