--- a/pages/engineering.html
+++ b/pages/engineering.html
@@ -1005,19 +1005,19 @@
           
             <p> Using T5 exonuclease mediated DNA assembly technology, hydA, hydB and hydCC fragments were inserted into the pETTrio vector skeleton to form the Pettrio-CL9-hydabCC expression plasmid. Subsequently, vector ligations mediated by T5 exonuclides were performed, and gene fragments hydE, hydF and hydG were fused with pRSFDuet vector skeleton to construct PRSFDUet-Hydefg chaperone promoting HydABCC expression vector.
 </p>
-			<img src="https://uploads.igem.org/teams/4927/wiki/engineering/qing-hua-mei/1.svg">
+			<img src="https://static.igem.wiki/teams/4927/wiki/engineering/qing-hua-mei/1.svg">
             <p class="figure"> Figure 1. Schematic diagram of vector construction: (A): pETTrio-CL9-HydABCC plasmid map,(B): pRSFDuet-HydEFG plasmid map
 </p>
-			<img src="https://uploads.igem.org/teams/4927/wiki/engineering/qing-hua-mei/2.svg">
+			<img src="https://static.igem.wiki/teams/4927/wiki/engineering/qing-hua-mei/2.svg">
 <p class="figure"> Figure 2: Results of agarose-gel electrophoresis of hydrogenase and chaperone recombinant plasmid. Note: 1/pETTrio-CL9-HydABCC, 2/ RSFDuet-HydEFG</p>
 
       <p class="eng-p-test">Test:</p>
             <p> Using methylene blue REDOX titration, it is possible to determine whether hydrogen is produced by observing the change of color of the reaction system. At the beginning of the reaction, methylene blue is added for titration and the blue color is disappeared as the standard.
 <br>
-			<img src="https://uploads.igem.org/teams/4927/wiki/engineering/qing-hua-mei/3.svg">
+			<img src="https://static.igem.wiki/teams/4927/wiki/engineering/qing-hua-mei/3.svg">
             <p class="figure"> Figure 3: Purification results of hydrogenase detected by SDS-PAGE
 </p>
-			<img src="https://uploads.igem.org/teams/4927/wiki/engineering/qing-hua-mei/4.svg">
+			<img src="https://static.igem.wiki/teams/4927/wiki/engineering/qing-hua-mei/4.svg">
             
 <p class="figure">   Figure 4: Methylene blue verifies hydrogenase ABCC activity
 </p>
