--- a/pages/engineering.html
+++ b/pages/engineering.html
@@ -150,7 +150,7 @@
                                 <img class="timeline__img" id="eng-img1-2" src="https://static.igem.wiki/teams/4927/wiki/hp/bottle2.svg"/>
                             </div>
 
-                            <h2 class="timeline__content-title">Cycle 1</h2>
+                            <h2 class="timeline__content-title">Cycle 2</h2>
                             <p class="timeline__content-desc">
                                 <p style="font-size: 18px;margin-bottom: 5px;">Design: We plan to retranslate 2A to verify that we inoculated a hybrid in cycle 1. In addition, we set up a more....</p>
                             </p>
@@ -211,10 +211,11 @@
                                 <img class="timeline__img" id="eng-img2-2" src="https://static.igem.wiki/teams/4927/wiki/hp/bottle2.svg"/>
                             </div>
 
-                            <h2 class="timeline__content-title">Cycle 1</h2>
+                            <h2 class="timeline__content-title">Cycle 2</h2>
                             <p class="timeline__content-desc">
-                                <p style="font-size: 18px;margin-bottom: 5px;">Cycle 2 
-                                    Design: We plan to re-transform T7 to achieve our desired goal....</p>
+                                <p style="font-size: 18px;margin-bottom: 5px;">
+					Design: We plan to re-transform T7 to achieve our desired goal....
+				</p>
                             </p>
                             </div>
                         </div>
