--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       </div>
   
     </div>
-    <div class="footer">
+    <div class="footer" id="bottom">
       <div class="auto clearfix">
         <div class="footer-floor1">
           <div class="footer-list">
@@ -400,30 +400,32 @@
       </div>
       <div class="mImg">
         <li style="--i:0;">
-          <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/education.svg" alt="">
+            <a href="./pages/education.html">
+                <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/education.svg" alt="">
+            </a>
         </li>
         <li style="--i:1;">
-          <a href="#">
+          <a href="./pages/part.html">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/part.svg" alt="">
           </a>
         </li>
         <li style="--i:2;">
-          <a href="#">
+          <a href="#home">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/home.svg" alt="">
           </a>
         </li>
         <li style="--i:3;">
-          <a href="#">
+          <a href="#home">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/up.svg" alt="">
           </a>
         </li>
         <li style="--i:4;">
-          <a href="#">
+          <a href="#bottom">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/down.svg" alt="">
           </a>
         </li>
         <li style="--i:7;">
-          <a href="#">
+          <a href="./pages/human-practices.html">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/hp.svg" alt="">
           </a>
         </li>
