--- a/pages/attributions.html
+++ b/pages/attributions.html
@@ -172,7 +172,7 @@
       </div>
   
     </div>
-    <div class="footer">
+    <div class="footer" id="bottom">
       <div class="auto clearfix">
         <div class="footer-floor1">
           <div class="footer-list">
@@ -259,30 +259,32 @@
       </div>
       <div class="mImg">
         <li style="--i:0;">
-          <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/education.svg" alt="">
+            <a href="./education.html">
+                <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/education.svg" alt="">
+            </a>
         </li>
         <li style="--i:1;">
-          <a href="#">
+          <a href="./part.html">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/part.svg" alt="">
           </a>
         </li>
         <li style="--i:2;">
-          <a href="#">
+          <a href="../index.html">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/home.svg" alt="">
           </a>
         </li>
         <li style="--i:3;">
-          <a href="#">
+          <a href="#title">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/up.svg" alt="">
           </a>
         </li>
         <li style="--i:4;">
-          <a href="#">
+          <a href="#bottom">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/down.svg" alt="">
           </a>
         </li>
         <li style="--i:7;">
-          <a href="#">
+          <a href="./human-practices.html">
             <img src="https://static.igem.wiki/teams/4927/wiki/footer/chong/hp.svg" alt="">
           </a>
         </li>
