--- a/pages/results.html
+++ b/pages/results.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="../CSS/teammember.css">
 	<link rel="stylesheet" href="../CSS/notebook.css">
 	<link rel="stylesheet" href="../CSS/footer.css">
+	<link rel="stylesheet" href="../CSS/result.css">
+	
 </head>
 <body>
   <!-- Navigation -->
