--- a/pages/human-practices.html
+++ b/pages/human-practices.html
@@ -535,6 +535,9 @@
         </div>
   
         <div class="modal-body">
+          <p>We went to Wuhan Zhonghuan Foundation Eco-Environmental Engineering Co., Ltd. to investigate the current soil restoration methods. Although the various methods of soil restoration have their advantages, there are still some shortcomings, and the soil problem is difficult to be fundamentally solved, and the soil degradation problem may occur repeatedly.</p>
+          <img src="../img/HP/4-2zhong huan gong si.png" alt="" style="width: 80%;margin: 0 auto;display: flex;position: relative;">
+          <p class="figure">figure1: Logo of Zhonghuan Company</p>
             <br>
             <p class="hp-p-purpose">Purpose:</p>
             <p>
@@ -971,6 +974,8 @@
         <div class="modal-body">
             
             <br>
+            <img src="../img/HP/7-26bo yuan sheng wu logo.png" alt="" style="width: 80%;margin: 0 auto;display: flex;position: relative;">
+            <p class="figure">figure1: Logo of Wuhan Boyuan Biotechnology Company</p>
             <p class="hp-p-purpose">Purpose:</p>
             <p>
             After having a preliminary vision of our product plan, we decided to seek the advice of a professional organization to further improve our product design plan, so we contacted Boyuan Company, who have rich experience in the design of biological products and manufacture many biological products. 
@@ -1108,7 +1113,9 @@
         </div>
   
         <div class="modal-body">
-            
+            <p>We have contacted the Wuhan Legal Service Network and conducted online meetings with legal professionals to explore legal issues related to our project and future products, as well as biosafety issues.</p>
+            <img src="../img/HP/8-15wuhan fa lv fu wu wang logo.png" alt="" style="width: 40%;margin: 0 auto;display: flex;position: relative;">
+            <p class="figure">figure1: Logo of Legal Services of Wuhan</p>
             <br>
             <p class="hp-p-purpose">Purpose:</p>
             <p>
@@ -1148,6 +1155,8 @@
             <p class="hp-p-Method">Method:</p>
             <p> We designed five experimental groups and five control groups. Each of the five proteins was coated on a corresponding plate and a positive control group was set up. And the corresponding receptive cells were directly coated on the same plates. The whole process strictly abides by aseptic operation in order to prevent bacterial contamination from affecting our analytical results. After one day of culture, we carefully observed the microbial growth on each plate. Thankfully, no microbial colony growth was found on the plates of the five experimental groups, while the positive control group showed colony growth, which proved that our protein species did not contain any genetically modified organisms.
   </p>
+          <img src="../img/HP/9.1 211.png" alt="" style="width: 80%;margin: 0 auto;display: flex;position: relative;">
+          <p class="figure">figure1: Figure of safety verification results</p>
             <p class="hp-p-Contribution">Contribution:</p>
           <p> Through this safety verification experiment, our project can continue without any doubt. This is definitely motivating for all the team members, because we don't want this wonderful way of protecting the soil to have to be stopped because of some potential safety issue.
   </p>
@@ -1584,7 +1593,6 @@
         </div>
       </div>
     </div>
-
   </div>
 <footer>
   <div style="margin-top: 50px"></div>
