--- a/pages/safety.html
+++ b/pages/safety.html
@@ -114,32 +114,25 @@
       <div data-tab="districtName1" class="districtName">
         <img src="https://static.igem.wiki/teams/4927/wiki/safety/safety-quation.png" alt="">
         <section class="markdown">
-          <h2 class="data-tab">1. Project safety</h2>
-          <p>
-            &nbsp&nbsp&nbsp&nbsp Using synthetic biology methods, the team aims to prepare hydrogen-rich water for plant irrigation. In the production process, we produce target proteins through engineered bacteria, which are subsequently cell-disrupted to obtain the desired enzymes. Subsequently, we used methanol as a substrate to produce hydrogen-rich water through the catalysis of four enzymes. Eventually, we use hydrogen-rich water for plant irrigation. The entire process ensures that microorganisms are not released into the environment, while team members strictly follow appropriate safety measures to ensure the safety of operators.
-          </p>
-          <img src="https://static.igem.wiki/teams/4927/wiki/education/global-nitrogen-fertilizer-use.png" alt="">
-          <p class="figure">Figure 1: Experimental procedure</p>
-        </section>
+		  <h2 class="data-tab">1. Project safety</h2>
+		  <p>
+			&nbsp&nbsp&nbsp&nbsp Using synthetic biology methods, the team aims to prepare hydrogen-rich water for plant irrigation. In the production process, we produce target proteins through engineered bacteria, which are subsequently cell-disrupted to obtain the desired enzymes. Subsequently, we used methanol as a substrate to produce hydrogen-rich water through the catalysis of four enzymes. Eventually, we use hydrogen-rich water for plant irrigation. The entire process ensures that microorganisms are not released into the environment, while team members strictly follow appropriate safety measures to ensure the safety of operators.
+		  </p>
+		  <img src="../img/process.png" alt="">
+		  <p class="figure">Figure 1: Experimental procedure</p>
+			<p>Safety is of significant importance in the practical basis for successful competition. At all stages of the competition, our team is extremely sensitive to security issues. First, team members undergo comprehensive safety training before stepping into the lab to ensure they are highly aware of potential hazards. In addition, safety considerations were carefully considered during the protocol construction phase to ensure that the experimental design minimizes potential risks. During the operation of the experiment, the team strictly adhered to safety guidelines to minimize the risk of accidents. Finally, comprehensive security measures are implemented within the laboratory to ensure maximum safety for team members and the environment</p>
+			<p>The team members strictly follow the safety regulations of the IGEM competition, adhere to the safety guidelines in the laboratory, and comply with national biosafety regulations. As a result, the project adheres to high safety standards throughout its process, ensuring that its safety is fully guaranteed.</p>
+        	<p>To verify that the protein solution produced by Gmos does not contain any Gmos, we coated the prepared mixture of five protein solutions on a plate and coated the plate with receptive cells BL21(DE3) as a positive control. Subsequently, the plates were incubated overnight in a 37℃ incubator, and the results were observed (as shown in Figure 1 below). The results showed that no microbial growth was observed on the plate coated with protein solution, but on the plate coated with receptive cell BL21(DE3). This indicated that the protein purified by Ni-NTK did not contain any genetically modified organisms</p>
+			<img src="../img/verification.png" alt="">
+		  <p class="figure">Figure 2: Safety verification test results. (A) protein solution coating results; (B) BL21(DE3) receptive cell coating results</p>
+		</section>
       </div>
       <div data-tab="districtName2" class="districtName">
         <h2 class="data-tab">2. laboratory safety</h2>
         <section class="markdown api-container">
-          <p>
-                          &nbsp&nbsp&nbsp&nbsp Our influence is ultimately limited, even if we provide a wonderful science education for a village, but China is so vast, the world is even wider. In order to achieve the broadest influence and the best effect of popular science education, we decided to use the network platform to spread our popular science education.We have recorded a number of podcasts about scientific fertilization for farmers and uploaded them to online media for all social groups to listen to. According to the feedback, our podcasts are very popular, and some netizens are urging us to update them as soon as possible so that we can learn more about scientific fertilization.
-                      </p>
-          <img src="" alt="">
-          <p class="figure">
-            Figure 2: Laboratory Specification Operations
-          </p>
-          <img src="" alt="">
-          <p class="figure">
-            Figure 3: Independent gel electrophoresis space
-          </p>
-          <img src="" alt="">
-          <p class="figure">
-            Figure 4: Fire extinguishers configured in the laboratory
-          </p>
+          	<p>
+            	&nbsp&nbsp&nbsp&nbsp Our influence is ultimately limited, even if we provide a wonderful science education for a village, but China is so vast, the world is even wider. In order to achieve the broadest influence and the best effect of popular science education, we decided to use the network platform to spread our popular science education.We have recorded a number of podcasts about scientific fertilization for farmers and uploaded them to online media for all social groups to listen to. According to the feedback, our podcasts are very popular, and some netizens are urging us to update them as soon as possible so that we can learn more about scientific fertilization.
+        	</p>
         </section>
       </div>
       <div data-tab="districtName3" class=" districtName">
