--- a/pages/results.html
+++ b/pages/results.html
@@ -55,7 +55,6 @@
 				<li><a class="dropdown-item" href="./experiments.html">Experiments</a></li>
 				<li><a class="dropdown-item" href="./notebook.html">Notebook</a></li>
 				<li><a class="dropdown-item" href="./results.html">Results</a></li>
-				<li><a class="dropdown-item" href="./model.html">Model</a></li>
 				<li><a class="dropdown-item" href="./safety.html">Safety</a></li>
 				</ul>
 			</div>
@@ -111,7 +110,7 @@
         <div class="result">
             <div class="shui">
                 <div class="shuidi">
-                    <a href="https://2023.igem.wiki/hubu-sky-china/education"><img src="https://static.igem.wiki/teams/4927/wiki/result/1.svg" alt=""></a>
+                    <a href="./education.html"><img src="https://static.igem.wiki/teams/4927/wiki/result/1.svg" alt=""></a>
                     <div class="shuiwen">
                         <p>Education</p>
                         <div><p style="color: rgb(0, 140, 255);">1246</p></div>
@@ -123,7 +122,7 @@
             <div class="shui">
                 <div class="kong"></div>
                 <div class="shuidi">
-                    <a href="http://parts.igem.org/cgi/partsdb/pgroup.cgi?pgroup=iGEM2023&group=HUBU-SKY-China"><img src="https://static.igem.wiki/teams/4927/wiki/result/2.svg" alt=""></a>
+                    <a href="./part.html"><img src="https://static.igem.wiki/teams/4927/wiki/result/2.svg" alt=""></a>
                     <div class="shuiwen" style="top: 50%;">
                         <p>Parts</p>
                         <div><p style="color: rgb(27, 199, 79);">59</p></div>
@@ -133,7 +132,7 @@
             </div>
             <div class="shui">
                 <div class="shuidi">
-                    <a href="https://2023.igem.wiki/hubu-sky-china/human-practices"><img src="https://static.igem.wiki/teams/4927/wiki/result/3.svg" alt=""></a>
+                    <a href="./human-practices.html"><img src="https://static.igem.wiki/teams/4927/wiki/result/3.svg" alt=""></a>
                     <div class="shuiwen">
                         <p>HP</p>
                         <div><p style="color: rgb(119, 97, 230); font-size: 24px;">200,000</p></div>
