--- a/index.html
+++ b/index.html
@@ -240,20 +240,20 @@
         </h1>
         <div class="box-container">
             <div class="box">
-                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/adh.svg"/>
-                <h3>affordable hotels</h3>
+                <a href="./pages/engineering.html"><img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/adh.svg"/></a>
+                <h3>Engineering</h3>
             </div>
             <div class="box">
-                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/faldh.svg"/>
-                <h3>food and drinks</h3>
+                <a href="./pages/education.html"><img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/faldh.svg"/></a>
+                <h3>Education</h3>
             </div>
             <div class="box">
-                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/fdh.svg"/>
-                <h3>safty guide</h3>
+                <a href="./pages/part.html"><img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/fdh.svg"/></a>
+                <h3>Part</h3>
             </div>
             <div class="box">
-                <img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/hydabc.svg"/>
-                <h3>around the world</h3>
+              <a href="./pages/human-practices.html"><img src="https://static.igem.wiki/teams/4927/wiki/home/ji-xiang-wu/hydabc.svg"/></a>
+              <h3>Human Practices</h3>
             </div>
         </div>
     </section>
